# nanochat

./: .gitignore  README.md  pyproject.toml
nanochat/: adamw.py  checkpoint_manager.py  common.py  configurator.py  core_eval.py  dataloader.py  dataset.py  engine.py  execution.py  gpt.py  loss_eval.py  muon.py  report.py  tokenizer.py
rustbpe/: README.md
rustbpe/src/: lib.rs
scripts/: base_eval.py  base_loss.py  base_train.py  chat_eval.py  chat_rl.py  chat_sft.py  mid_train.py  tok_eval.py  tok_train.py
tasks/: gsm8k.py
