[project]
name = "nanochat"
version = "0.0.1"
description = "reimplementation of nanochat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "tiktoken>=0.7.0",
  "wandb>=0.16.0",
  "jinja2>=3.1.0",
  "pyarrow>=14.0.0",
  "tokenizers>=0.15.0",
  "requests>=2.31.0",
  "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanochat"]